fixed alignation

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -336,6 +336,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 40px;
+}
+#carousel #projectName {
+  color: rgb(242, 237, 237);
+}
+#carousel #projectDesc {
+  color: rgb(242, 237, 237);
 }
 #carousel #videoSliderContainer {
   display: flex;
@@ -350,17 +357,20 @@
   z-index: 2;
 }
 #carousel #videoSliderContainer .videoSlider {
-  width: 95%;
+  position: relative;
+  width: 96%;
   height: 88%;
   overflow: hidden;
   display: flex;
   margin-top: 1%;
   margin-left: 2%;
-  border-radius: 5%;
+  border-radius: 3%;
 }
 #carousel #videoSliderContainer .videoSlider video {
+  position: absolute;
   width: 100%;
   height: 100%;
+  opacity: 0;
 }
 
 .videoActive {
