--- a/src/styles/ShowCase.scss
+++ b/src/styles/ShowCase.scss
@@ -1,8 +1,16 @@
+@import "Variables";
 #carousel {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 40px;
+  #projectName {
+    color: $mainTextColor;
+  }
+  #projectDesc {
+    color: $mainTextColor;
+  }
   #videoSliderContainer {
     display: flex;
     height: 600px;
@@ -15,16 +23,19 @@
       z-index: 2;
     }
     .videoSlider {
-      width: 95%;
+      position: relative;
+      width: 96%;
       height: 88%;
       overflow: hidden;
       display: flex;
       margin-top: 1%;
       margin-left: 2%;
-      border-radius: 5%;
+      border-radius: 3%;
       video {
+        position: absolute;
         width: 100%;
         height: 100%;
+        opacity: 0;
       }
     }
   }
